<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvActif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tvActif"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/imageViewUn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageViewDeux"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvActif"
        app:srcCompat="@drawable/banane" />

    <ImageView
        android:id="@+id/imageViewDeux"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageViewTrois"
        app:layout_constraintStart_toEndOf="@+id/imageViewUn"
        app:layout_constraintTop_toBottomOf="@+id/tvActif"
        app:srcCompat="@drawable/cgodin" />

    <ImageView
        android:id="@+id/imageViewTrois"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewDeux"
        app:layout_constraintTop_toBottomOf="@+id/tvActif"
        app:srcCompat="@drawable/diamant" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="144dp"
        android:layout_height="184dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUn">

        <RadioButton
            android:id="@+id/radioButtonUn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/radioButtonUn"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonDeux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/radioButtonDeux"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonTrois"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/radioButtonTrois"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/btnJouer"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/gray"
        android:text="@string/btnJouer"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBoxCaisseSous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:text="@string/checkBoxCaisseSous"
        app:layout_constraintEnd_toEndOf="@+id/btnJouer"
        app:layout_constraintTop_toBottomOf="@+id/btnJouer" />

    <TextView
        android:id="@+id/tvAjoutMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/tvAjoutMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tvCodeSevretMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/tvCodeSevretMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAjoutMessage" />

    <EditText
        android:id="@+id/editTextTextCodeSecret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/editTextTextCodeSecret"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/tvCodeSevretMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCodeSevretMessage"
        app:layout_constraintTop_toTopOf="@+id/tvCodeSevretMessage"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>